# PALM-rs

./: .gitattributes  .gitignore  README.md
artifacts/palm/: analyze_html.py  get_function_nums.py  get_time.py  re_run.sh
artifacts/palm/bytes/: Cargo.toml
artifacts/palm/fastrand/: Cargo.toml
artifacts/palm/hashbrown/: Cargo.toml
artifacts/palm/http/: Cargo.toml
artifacts/palm/indexmap/: Cargo.toml
artifacts/palm/itoa/: Cargo.toml
artifacts/palm/json/: Cargo.toml
artifacts/palm/once_cell/: Cargo.toml
artifacts/palm/quote/: Cargo.toml  rust-toolchain.toml
artifacts/palm/rand/: Cargo.toml
artifacts/palm/regex/: Cargo.toml
artifacts/palm/rust-base64/: Cargo.toml
artifacts/palm/ryu/: Cargo.toml
artifacts/palm/serde/: Cargo.toml
artifacts/palm/strsim-rs/: Cargo.toml
artifacts/palm/thiserror/: Cargo.toml
artifacts/rug/: analysize_html.py  analysize_html_once_cell.py  apply_base_llm.py  fuzz_engine.py  get_file_path.py  get_time.py  main.py
artifacts/rug/bytes/: 1  coverage.json  coverage.xml
artifacts/rug/fastrand/: 1  coverage.json  coverage.xml  fastrand.gpt.json  fastrand.json
artifacts/rug/hashbrown/: 1  coverage.json  coverage.xml  (+2 more)
artifacts/rumono/: analysize_html.py  get_file_path.py
palm/: .dockerignore  .gitignore  Cargo.toml  README.md  install.sh  rust-toolchain.toml
palm/brinfo/: Cargo.toml  README.md
palm/brinfo/src/: lib.rs
palm/brinfo/src/analysis/: branchvisitor.rs  callback.rs  condition.rs  exporter.rs  fnblocks.rs  hirvisitor.rs  sourceinfo.rs
palm/build-utils/: Cargo.toml
palm/docker/: Dockerfile  docker-build  docker-run
palm/focxt/: Cargo.toml  README.md
palm/focxt/call_chain/: Cargo.toml  build.rs
palm/focxt/call_chain/src/: lib.rs
palm/focxt/call_chain/src/analysis/: callback.rs  exporter.rs  hirvisitor.rs  sourceinfo.rs
palm/focxt/src/: main.rs  utils.rs
palm/focxt/src/collect_context/: crate_context.rs  items_context.rs  mod.rs  mod_context.rs  result.rs  syntax_context.rs
palm/utgen/: .gitignore  Cargo.toml  README.md
palm/utgen/res/: code_template.json  constraint.json  input_prompt.json  oracle_prompt.json  prefix_prompt.json  rustassistant_prompt.json  test_prompt.json
palm/utgen/src/: lib.rs  main.rs
palm/utgen/src/run/: coverage_json.rs  integration.rs  llm_fix.rs  llm_fix_type.rs  mod.rs  prepare.rs  run.rs
palm/utgen/src/types/: brdata.rs  mod.rs  sourceinfo.rs  testgen.rs
palm/utgen/src/utils/: backup.rs  check.rs  clean.rs  insert.rs  mod.rs  preprocess.rs
(+179801 files in other folders)
