[package]
name = "brinfo"
version = "0.1.0"
edition = "2021"

[package.metadata.rust-analyzer]
rustc_private = true

[[bin]]
name = "cargo-brinfo"

[[bin]]
name = "brinfo"

[dependencies]
base62 = "2.2"
cargo_metadata = "0.18"
log = "0.4"
petgraph = "0.6"
rand = "0.9"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = "0.12"
syn = { version = "2.0", features = ["full"] }
time = "0.3"
twox-hash = "2.1"

[build-dependencies]
build-utils = { path = "../build-utils" }
