[package]
name = "focxt"
version = "0.1.0"
edition = "2021"

# [workspace]
# members = ["call_chain"]

[dependencies]
call_chain = { path = "call_chain" }
clap = { version = "4.5", features = ["derive"] }
prettyplease = "0.2"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0", features = [
  "extra-traits",
  "full",
  "parsing",
  "visit",
  "visit-mut",
] }
toml = "0.8"

[build-dependencies]
build-utils = { path = "../build-utils" }
