[package]
name = "utgen"
version = "0.1.0"
edition = "2021"

[dependencies]
async-openai = "0.26"
cargo_metadata = "0.19"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
futures = "0.3"
log = "0.4"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quick-xml = "0.37"
quote = "1.0"
rand = "0.9"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = "0.12"
strfmt = "0.2"
syn = { version = "2.0", features = ["full", "visit"] }
time = "0.3"
tokio = { version = "1", features = ["full"] }
walkdir = "2.5"

[build-dependencies]
build-utils = { path = "../build-utils" }
